--- a/Views/PI/RegistroMarcas.cshtml
+++ b/Views/PI/RegistroMarcas.cshtml
@@ -167,18 +167,18 @@
         //var tipourl = parseInt($("#tipo_registro").val());
         //if (tipourl == 0) tipourl = 1;
         switch (parseInt(tipo_registro)) {
-            case 1: tipo_solicitud = 1; tipo_solicitud_nombre = "Propiedad Industrial - Marcas"; break;
-            case 2: tipo_solicitud = 2; tipo_solicitud_nombre = "Propiedad Industrial - Avisos Comerciales"; break;
-            case 3: tipo_solicitud = 3; tipo_solicitud_nombre = "Propiedad Industrial - Patentes"; break;
-            case 4: tipo_solicitud = 4; tipo_solicitud_nombre = "Propiedad Industrial - Diseños Industriales"; break;
-            case 5: tipo_solicitud = 5; tipo_solicitud_nombre = "Propiedad Industrial - Modelos Utilidades"; break;
-            case 6: tipo_solicitud = 6; tipo_solicitud_nombre = "Propiedad Industrial - Modelos Industriales"; break;
-            case 7: tipo_solicitud = 7; tipo_solicitud_nombre = "Propiedad Itelectual - Obras Artisticas"; break;
-            case 8: tipo_solicitud = 8; tipo_solicitud_nombre = "Propiedad Itelectual - Obras Visuales"; break;
-            case 9: tipo_solicitud = 9; tipo_solicitud_nombre = "Propiedad Itelectual - Obras Literarias"; break;
-            case 10: tipo_solicitud = 10; tipo_solicitud_nombre = "Propiedad Itelectual - Obras Auditivas"; break;
-            case 11: tipo_solicitud = 11; tipo_solicitud_nombre = "Propiedad Itelectual - Obras Gr&aacute;ficas"; break;
-            case 12: tipo_solicitud = 12; tipo_solicitud_nombre = "Propiedad Itelectual - Obras Tecnol&oacute;gicas"; break;
+            case 1: tipo_solicitud = 1; tipo_solicitud_nombre = "Propiedad Industrial Marcas"; break;
+            case 2: tipo_solicitud = 2; tipo_solicitud_nombre = "Propiedad Industrial Avisos Comerciales"; break;
+            case 3: tipo_solicitud = 3; tipo_solicitud_nombre = "Propiedad Industrial Patentes"; break;
+            case 4: tipo_solicitud = 4; tipo_solicitud_nombre = "Propiedad Industrial Diseños Industriales"; break;
+            case 5: tipo_solicitud = 5; tipo_solicitud_nombre = "Propiedad Industrial Modelos Utilidades"; break;
+            case 6: tipo_solicitud = 6; tipo_solicitud_nombre = "Propiedad Industrial Modelos Industriales"; break;
+            case 7: tipo_solicitud = 7; tipo_solicitud_nombre = "Propiedad Intelectual Obras Artisticas"; break;
+            case 8: tipo_solicitud = 8; tipo_solicitud_nombre = "Propiedad Intelectual Obras Visuales"; break;
+            case 9: tipo_solicitud = 9; tipo_solicitud_nombre = "Propiedad Intelectual Obras Literarias"; break;
+            case 10: tipo_solicitud = 10; tipo_solicitud_nombre = "Propiedad Intelectual Obras Auditivas"; break;
+            case 11: tipo_solicitud = 11; tipo_solicitud_nombre = "Propiedad Intelectual Obras Gr&aacute;ficas"; break;
+            case 12: tipo_solicitud = 12; tipo_solicitud_nombre = "Propiedad Intelectual Obras Tecnol&oacute;gicas"; break;
             default: tipo_solicitud = 0; tipo_solicitud_nombre = "Propiedad Industrial e Intelectual"; break;
         }
         document.getElementById("tipo_registro").value = tipo_solicitud;
