--- a/Views/Shared/_aside.cshtml
+++ b/Views/Shared/_aside.cshtml
@@ -354,7 +354,7 @@
                 {
                     <li class="">
                         <a href="#" title="Propiedad Intelectual" data-filter-tags="Propiedad Intelectual">
-                            <i class='fa fa-box'></i>
+                            <i class='fa fa-box-open'></i>
                             <span class="nav-link-text" data-i18n="Propiedad Intelectual">Propiedad Intelectual</span>
                         </a>
                         <ul>
