ajustes convenio licencia

--- a/Views/PI/ConvenioLicencia.cshtml
+++ b/Views/PI/ConvenioLicencia.cshtml
@@ -375,7 +375,14 @@
                                 </select>
                             </div>
                         </div>
+                        <div class="col-md-4">
+                            <div class="form-group" id="uu_24_c">
+                                <label>Tipo Licencia</label>
+                                <input type="text" class="form-control input-sm" id="uu_24" autocomplete="off" />
+                            </div>
+                        </div>
                     </div>
+                   
                     <div class="row">
                         <div class="col-md-4">
                             <div class="form-group" id="solicitudt" style="margin:0 !important;">
