--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -534,9 +534,9 @@
                             <hr id="lic_0_c" style="display:none;" />
                             <div class="row" id="licencia_a" style="display:none;">
                                 <div class="col-md-12">
-                                    @*<div class="form-group" id="licenciat" style="margin:0 !important;">
-                                        <label>Licencia</label>
-                                    </div>*@
+                                    <div class="form-group" id="licenciat" style="margin:0 !important;">
+                                        <label>Oficio</label>
+                                    </div>
                                     <div class="form-group" id="licc">
                                         <a href="" id="licencial" class="btn btn-sm btn-success"><i class="fa fa-download"></i></a>
                                         @*<label for="carta" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>*@
