ajuste cat licencia-cesion

--- a/Views/PI/ContratoCesion.cshtml
+++ b/Views/PI/ContratoCesion.cshtml
@@ -181,19 +181,19 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-4" style="">
+                        <div class="col-md-2" style="">
                             <div class="form-group" id="uu_02_c">
                                 <label>Número de registro</label>
                                 <input type="text" class="form-control input-sm" id="uu_02" autocomplete="off" />
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-7">
                             <div class="form-group" id="uu_01_c">
-                                <label>Nombre</label>
+                                <label>Nombre (Marca, Patente, Aviso Comercial, Modelo Industrial, Modelo Utilidad, Diseño Industrial, Obra Atistica)</label>
                                 <input type="text" class="form-control input-sm" id="uu_01" autocomplete="off" />
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <div class="form-group" id="uu_03_c">
                                 <label>Número de expediente</label>
                                 <input type="text" class="form-control input-sm" id="uu_03" autocomplete="off" />
@@ -231,11 +231,11 @@
                     <hr />
                     <div class="row">
                         <div class="col-md-6">
-                            <label>Instrucciones al corresponsal</label>
+                            @*<label>Instrucciones al corresponsal</label>*@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group" id="uu_09_c">
-                                        <label>Fecha</label>
+                                        <label>Fecha instrucciones al corresponsal</label>
                                         <input type="text" class="form-control input-sm" id="uu_09" autocomplete="off" />
                                     </div>
                                 </div>
@@ -248,11 +248,11 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <label>Envío de documentos</label>
+                            @*<label>Envío de documentos</label>*@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group" id="uu_11_c">
-                                        <label>Fecha</label>
+                                        <label>Fecha envío de documentos</label>
                                         <input type="text" class="form-control input-sm" id="uu_11" autocomplete="off" />
                                     </div>
                                 </div>
@@ -274,6 +274,12 @@
                             </div>
                         </div>
                         <div class="col-md-3">
+                            <div class="form-group" id="uu_21_c">
+                                <label>Completado</label>
+                                <input type="text" class="form-control input-sm" id="uu_21" autocomplete="off" />
+                            </div>
+                        </div>
+                        <div class="col-md-3">
                             <div class="form-group" id="uu_14_c">
                                 <label>Fecha de concesión</label>
                                 <input type="text" class="form-control input-sm" id="uu_14" autocomplete="off" />
@@ -285,7 +291,7 @@
                                 <input type="text" class="form-control input-sm" id="uu_15" autocomplete="off" />
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3" style="display:none;">
                             <div class="form-group" id="uu_16_c">
                                 <label>Fecha de vencimiento</label>
                                 <input type="text" class="form-control input-sm" id="uu_16" autocomplete="off" />
