--- a/Views/PI/ConvenioLicencia.cshtml
+++ b/Views/PI/ConvenioLicencia.cshtml
@@ -218,19 +218,19 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-7">
                             <div class="form-group" id="uu_01_c">
-                                <label>Nombre</label>
+                                <label>Nombre (Marca, Patente, Aviso Comercial, Modelo Industrial, Modelo Utilidad, Diseño Industrial, Obra Atistica)</label>
                                 <input type="text" class="form-control input-sm" id="uu_01" autocomplete="off" />
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-2">
                             <div class="form-group" id="uu_02_c">
                                 <label>Número de registro</label>
                                 <input type="text" class="form-control input-sm" id="uu_02" autocomplete="off" />
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                             <div class="form-group" id="uu_03_c">
                                 <label>Número de expediente</label>
                                 <input type="text" class="form-control input-sm" id="uu_03" autocomplete="off" />
@@ -311,6 +311,12 @@
                             <div class="form-group" id="uu_13_c">
                                 <label>Fecha de solicitud</label>
                                 <input type="text" class="form-control input-sm" id="uu_13" autocomplete="off" />
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="form-group" id="uu_22_c">
+                                <label>Completado</label>
+                                <input type="text" class="form-control input-sm" id="uu_22" autocomplete="off" />
                             </div>
                         </div>
                         <div class="col-md-3">
